# ederToLora

./: .gitignore  CMakeLists.txt  sdkconfig
components/adcservice/: CMakeLists.txt  adcservice.cpp
components/adcservice/include/: adcservice.h
components/loraservice/: CMakeLists.txt  loraService.cpp
components/loraservice/include/: loraservice.h
components/onewireservice/: CMakeLists.txt  idf_component.yml  onewirebus.cpp  onewiredevice.cpp  onewireds18b20.cpp  onewireservice.cpp
components/onewireservice/include/: onewirebus.h  onewiredef.h  onewiredevice.h  onewireds18b20.h  onewireservice.h
components/uartservice/: CMakeLists.txt  uartservice.cpp
components/uartservice/include/: uartservice.h
main/: CMakeLists.txt  app.cpp  config.h  main.cpp
main/include/: app.h  ederbuffer.h  servicemanager.h
